--- a/index.html
+++ b/index.html
@@ -12,152 +12,63 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Projeto Web</title>
+    <link rel="stylesheet" href="./content/css/styles.css">
+    <title>FinPocket</title>
 </head>
 
 <body>
     <header class="header">
-        <h1 class="logo">Projeto Web</h1>
+        <h1><i class="fa-solid fa-florin-sign"></i> FinPocket</h1>
         <nav class="nav-menu">
             <ul>
-                <li><a href="">Conteúdo</a></li>
-                <li><a href="">Conteúdo</a></li>
-                <li><a href="">Conteúdo</a></li>
-                <li><a href="" class="btn2">Login</a></li>
+                <li><a href="" class="btn1">Home</a></li>
+                <li><a href="" class="btn1">Login</a></li>
+                <li><a href="" class="btn1">Sobre</a></li>
+                <li><a href="" class="btn1">Configurações</a></li>
             </ul>
         </nav>
         <div class="sanduiche">
-            <span class="barra"></span>
-            <span class="barra"></span>
-            <span class="barra"></span>
+            <i class="fa-solid fa-bars"></i>
         </div>
     </header>
     <main class="main">
-        <article class="article">
-            <h1>Lorem Ipsum</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic magnam sit animi accusantium, ullam
-                molestiae consequatur aperiam vero fuga laborum rem exercitationem itaque, vel, optio fugiat corrupti.
-                Autem accusantium repellendus consequuntur voluptas. Quos eos inventore quas culpa reprehenderit sequi
-                ipsum! Voluptas autem nisi dolorum quisquam nihil nam ab quasi unde!
-            </p>
-            <a href="" class="btn1">Mais informações</a>
-        </article>
         <section class="section">
-            <div>
-                <h3>Lorem ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, aperiam.</p>
-                <a href="" class="btn1">Acessar link</a>
-            </div>
-            <div>
-                <h3>Lorem ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, aperiam.</p>
-                <a href="" class="btn1">Acessar link</a>
-            </div>
-            <div>
-                <h3>Links Relacionados</h3>
-                <ul>
-                    <li><a href="" class="btn3">Link 1</a></li>
-                    <li><a href="" class="btn3">Link 2</a></li>
-                    <li><a href="" class="btn3">Link 3</a></li>
-                    <li><a href="" class="btn3">Link 4</a></li>
-                    <li><a href="" class="btn3">Link 5</a></li>
-                </ul>
+            <div class="container">
+                <h2>Acesse sua conta:</h2>
+                <form name="dados" id="dados" method="post" action="" class="box-form">
+                    <div class="box-item">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" id="email" name="email" class="form-control" required autofocus
+                            placeholder="Ex: seuemail@email.com">
+                    </div>
+                    <div class="box-item">
+                        <label for="senha" class="form-label">Senha</label>
+                        <input type="password" id="senha" name="senha" class="form-control" required minlength="5"
+                            maxlength="60" placeholder="Ex: SenhaForte@123">
+                    </div>
+                    <div class="box-item">
+                        <button type="button" class="form-btn">Entrar</button>
+                        <a href="" class="btn3">Esqueci minha senha</a>
+                    </div>
+                </form>
             </div>
         </section>
-        <form id="dados" name="dados" method=get action="">
-            <fieldset>
-                <legend>Campo radio</legend>
-                <p>Tipo conta:</p>
-                <input type="radio" name="conta" id="conta1" value="free">
-                <label for="conta1">Free</label>
-                <input type="radio" name="conta" id="conta2" value="basic">
-                <label for="conta2">Basic</label>
-                <input type="radio" name="conta" id="conta3" value="plus">
-                <label for="conta3">Plus</label>
-                <input type="radio" name="conta" id="conta4" value="premium">
-                <label for="conta4">Premium</label>
-            </fieldset>
-            <fieldset>
-                <legend>Documentos</legend>
-                <label for="arquivo">Selecione um ou mais arquivos de seus documentos:</label>
-                <input type="file" id="arquivo" name="arquivo">
-            </fieldset>
-            <fieldset>
-                <legend>Dados do usuário</legend>
-                <label for="area">Área de atuação:</label>
-                <select id="area" required>
-                    <option value="0" disable selected>Selecione a sua opção</option>
-                    <option value="1">Desenvolvimento</option>
-                    <option value="2">Banco de Dados</option>
-                    <option value="3">Gestão de Projetos</option>
-                </select>
-            </fieldset>
-            <fieldset>
-                <h3>Tecnologias Favoritas</h3>
-                <label for="tech">Selecione ou digite sua
-                    tecnologia:</label>
-                <input list="myTech" id="tech" name="tech">
-                <datalist id="myTech">
-                    <option value="Blockchain">
-                    <option value="Cyber Security">
-                    <option value="Cloud">
-                    <option value="Hiperautomação">
-                    <option value="IA">
-                    <option value="IOT">
-                    <option value="Metaverso">
-                    <option value="Smart Cities">
-                    <option value="XaaS">
-                </datalist>
-            </fieldset>
-            <fieldset>
-                <button type="submit">Enviar Dados</button>
-                <button type="reset">Limpar Formulário</button>
-                <button type="button">Chamar Javascript </button>
-            </fieldset>
-            <fieldset>
-                <legend>Dados do usuário</legend>
-                <label for=“preco”>Menor Preço:</label>
-                <input type=“range” id=“preco” name=“preco” min=“100” max=“1000” step=“50” disabled>
-            </fieldset>
-        </form>
         <div class="container">
-            <h2>Crie sua conta</h2>
-            <form name="dados" id="dados" method="post" action="" class="box-form">
-                <div class="box-item">
-                    <label for="nome" class="form-label">Nome</label>
-                    <input type="text" id="nome" name="nome" class="form-control" required autofocus minlength="10"
-                        maxlength="50" placeholder="Ex: Fulano de Tal">
-                </div>
-                <div class="box-item">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" id="email" name="email" class="form-control" required autofocus
-                        placeholder="Ex: seuemail@email.com">
-                </div>
-                <div class="box-item">
-                    <label for="user" class="form-label">Usuário</label>
-                    <input type="text" id="user" name="user" class="form-control" required autofocus minlength="5"
-                        maxlength="15" placeholder="Ex: user12345">
-                </div>
-                <div class="box-item">
-                    <label for="senha" class="form-label">Senha</label>
-                    <input type="password" id="senha" name="senha" class="form-control" required minlength="5"
-                        maxlength="15" placeholder="Ex: 123456">
-                </div>
-                <div class="box-item">
-                    <button type="button" class="form-btn">Criar conta</button>
-                </div>
+            <form id="dados" name="dados" method=get action="" class="box-form2">
+                <fieldset>
+                    <button type="button" class="btn2">Entre com <i class="fa-brands fa-google"></i>oogle</button>
+                    <button type="button" class="btn2">Cadastre-se</button>
+                </fieldset>
             </form>
         </div>
     </main>
     <footer class="footer">
-        <p>Todos os direitos reservados - Projeto Web</p>
+        <p>Todos os direitos reservados - FinPocket</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="./assets/js/menu.js"></script>
+    <script src="./content/js/menu.js"></script>
 </body>
 
 </html>
